# optim-agent

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SKILL.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md  manifest.json
docs/: index.html  privacy.html
docs/assets/: abl_effort_high_s0.json  abl_effort_high_s1.json  abl_effort_high_s2.json  abl_effort_high_s3.json  abl_effort_high_s4.json  abl_effort_low_s0.json  abl_effort_low_s1.json  abl_effort_low_s2.json  abl_effort_low_s3.json  abl_effort_low_s4.json  abl_effort_max_s0.json  abl_effort_max_s1.json  abl_effort_max_s2.json  abl_effort_medium_s0.json  abl_effort_medium_s1.json  abl_effort_medium_s2.json  abl_effort_medium_s3.json  abl_effort_medium_s4.json  abl_effort_xhigh_s0.json  abl_effort_xhigh_s1.json  abl_effort_xhigh_s2.json  abl_prune_loose_s0.json  abl_prune_loose_s1.json  abl_prune_medium_s0.json  abl_prune_medium_s1.json  abl_prune_tight_s0.json  abl_prune_tight_s1.json  cifar10_curves_GPT-5.5-medium-no-context_s0.json  cifar10_curves_GPT-5.5-medium-no-context_s1.json  cifar10_curves_GPT-5.5-medium-no-context_s2.json  cifar10_curves_GPT-5.5-medium-no-context_s3.json  cifar10_curves_GPT-5.5-medium-no-context_s4.json  cifar10_curves_GPT-5.5-medium_s0.json  cifar10_curves_GPT-5.5-medium_s1.json  cifar10_curves_GPT-5.5-medium_s2.json  cifar10_curves_GPT-5.5-medium_s3.json  cifar10_curves_GPT-5.5-medium_s4.json  cifar10_curves_Random_s0.json  cifar10_curves_Random_s1.json  cifar10_curves_Random_s2.json  (+187 more)
docs/i18n/: README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_ZH.md
docs/superpowers/plans/: 2026-07-08-mnist-experiment.md  2026-07-09-hpo-auditability-paper-claim.md  2026-07-09-readme-practical-values.md  2026-07-10-anchor-free-classification-cumulative-error.md  2026-07-10-anchor-free-classification-reward.md  2026-07-10-prompt-appendix.md  2026-07-11-five-seed-benchmark-refresh.md  2026-07-11-no-context-hard-function-rosters.md  2026-07-13-paper-novelty-framing.md  2026-07-14-claude-codex-plugin-wrappers.md  2026-07-14-credit-benchmark-single-config.md  2026-07-14-lunarlander-gif-provenance.md  2026-07-14-paper-overview-diagram.md  2026-07-14-skill-hub-distribution.md
docs/superpowers/specs/: 2026-07-08-mnist-experiment-design.md  2026-07-09-hpo-auditability-paper-claim-design.md  2026-07-09-readme-practical-values-design.md  2026-07-10-anchor-free-classification-cumulative-error-design.md  2026-07-10-anchor-free-classification-reward-design.md  2026-07-10-prompt-appendix-design.md  2026-07-11-five-seed-benchmark-refresh-design.md  2026-07-11-no-context-hard-function-rosters-design.md  2026-07-13-paper-novelty-framing-design.md  2026-07-13-rl-control-benchmark-design.md  2026-07-14-claude-codex-plugin-wrappers-design.md  2026-07-14-paper-overview-diagram-design.md  (+3 more)
examples/: ablations.py  cifar10.py  classic_functions.py  credit_card.py  hard_functions.py  inference_tuning.py  mnist.py  quant_walk_forward.py  quickstart.py  rl_control.py  sklearn_tuning.py
optim_agent/: __init__.py  agent.py  pruners.py  samplers.py  space.py  study.py
paper/: README.md
paper/src/: main.tex  optim-agent.bib  verify_paper.sh
plugins/optim-agent/: SKILL.md
scripts/: check_public_readiness.py  render_classification_benchmarks.py  render_credit_paper_figure.py  render_trajectory.py  verify_cifar10_cumulative_error.py  verify_cifar10_reward.py  verify_classification_cumulative_error.py  verify_classification_reward.py  verify_mnist_cumulative_error.py  verify_mnist_prompting.py  verify_mnist_reward.py
skills/optim-agent/: SKILL.md
tests/: test_lunarlander_animation.py  test_metric_terminology.py  test_optim_agent.py  test_plugin_manifests.py  test_public_readiness.py
tutorials/: README.md  quickstart.ipynb
(+3 files in other folders)
