[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "optim-agent"
version = "0.1.0"
description = "Agentic system optimization: coding agents reason over parameter meaning and trial history."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Optim-Agent", email = "admin@optim-agent.com" }]
keywords = [
    "black-box-optimization",
    "agent",
    "llm",
    "hyperparameter-optimization",
    "machine-learning",
    "scientific-computing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Optim-Agent/optim-agent"
Documentation = "https://optim-agent.github.io/optim-agent/"
Repository = "https://github.com/Optim-Agent/optim-agent"
Issues = "https://github.com/Optim-Agent/optim-agent/issues"
Changelog = "https://github.com/Optim-Agent/optim-agent/blob/main/CHANGELOG.md"

[project.optional-dependencies]
examples = ["numpy", "matplotlib", "optuna"]  # optuna only for the TPE benchmark baseline
dev = [
    "build>=1.2",
    "pre-commit>=4",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.15",
]
vision = ["torch>=2.2", "torchvision>=0.28.0"]
ml = ["scikit-learn>=1.3"]

[tool.setuptools]
packages = ["optim_agent"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
